8290886 [11u]: Backport of JDK-8266250 introduced test failures